--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header>
             <img class="imgtitulo" src="Social_Pet_Club-200.png" alt="Social pet club">
             <nav class="menu">
-                <a href="clubpet.html" >INICIO</a>
+                <a href="index.html" >INICIO</a>
                 <a href="Produtos.html"> PRODUTOS </a>
                  <a href="quemsomos.html"> QUEM SOMOS </a>
                  
